<resources>
    <string name="app_name">Aviao</string>
    <string name="informe_x">Informe X</string>
    <string name="informe_y">Informe Y</string>
    <string name="informe_angulo">Informe o angulo</string>
    <string name="raio">Raio</string>
    <string name="angulo">Angulo</string>
    <string name="velocidade">Velocidade</string>
    <string name="direcao">Direção</string>
    <string name="adicionar">Adicionar</string>
    <string name="action_settings">Settings</string>
    <string name="data_grid">Data Grid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="id">ID</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="r">R</string>
    <string name="a">A</string>
    <string name="v">V</string>
    <string name="d">D</string>
    <string name="ok">OK</string>
    <string name="translandar">Translandar</string>
    <string name="escalonar">Escalonar</string>
    <string name="rotacionar">Rotacionar</string>
    <string name="remover_aviao">Remover Aviões</string>
    <string name="adicionar_aviao">Adicionar Avião</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="distancia_minima">Distância Mínima</string>
    <string name="avioes_proximos">Aviões Próximos</string>
    <string name="proximos_aeroporto">Próximos ao Aeroporto</string>
</resources>
